[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/menu/create_room_lobby.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/dreamwood-font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/wonderbar.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/JmharkhamRegular-olD0.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 54
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 53
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 66
font_data = ExtResource( 2 )

[node name="CreateRoomLobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 311.0
margin_top = 197.0
margin_right = 1647.0
margin_bottom = 904.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 738.0
margin_top = 25.0
margin_right = 800.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 3 )
text = "Room Id: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomIdInput" type="LineEdit" parent="Panel"]
margin_left = 358.0
margin_top = 92.0
margin_right = 1333.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 4 )
text = "77e3854e-988e-4518-821f-a1ed1a3bf38e"
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel"]
margin_left = 17.0
margin_top = 105.0
margin_right = 319.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 5 )
text = "Players Joined"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Panel"]
margin_left = 7.0
margin_top = 113.0
margin_right = 47.0
margin_bottom = 153.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayersJoined" type="VBoxContainer" parent="Panel/Control"]
margin_left = 10.0
margin_top = 81.0
margin_right = 232.0
margin_bottom = 308.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Control/PlayersJoined"]
margin_right = 553.0
margin_bottom = 73.0

[node name="Label" type="Label" parent="Panel/Control/PlayersJoined/HBoxContainer"]
margin_right = 213.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "Player Id: "

[node name="Label2" type="Label" parent="Panel/Control/PlayersJoined/HBoxContainer"]
margin_left = 217.0
margin_right = 553.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "saranuid (Host)"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/Control/PlayersJoined"]
margin_top = 77.0
margin_right = 553.0
margin_bottom = 150.0

[node name="Label" type="Label" parent="Panel/Control/PlayersJoined/HBoxContainer2"]
margin_right = 213.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "Player Id: "

[node name="Label2" type="Label" parent="Panel/Control/PlayersJoined/HBoxContainer2"]
margin_left = 217.0
margin_right = 553.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "saranuid (Host)"

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/Control/PlayersJoined"]
margin_top = 154.0
margin_right = 553.0
margin_bottom = 227.0

[node name="Label" type="Label" parent="Panel/Control/PlayersJoined/HBoxContainer3"]
margin_right = 213.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "Player Id: "

[node name="Label2" type="Label" parent="Panel/Control/PlayersJoined/HBoxContainer3"]
margin_left = 217.0
margin_right = 553.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "saranuid (Host)"

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/Control/PlayersJoined"]
margin_top = 231.0
margin_right = 553.0
margin_bottom = 304.0

[node name="Label" type="Label" parent="Panel/Control/PlayersJoined/HBoxContainer4"]
margin_right = 213.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "Player Id: "

[node name="Label2" type="Label" parent="Panel/Control/PlayersJoined/HBoxContainer4"]
margin_left = 217.0
margin_right = 553.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "saranuid (Host)"

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel/Control/PlayersJoined"]
margin_top = 308.0
margin_right = 553.0
margin_bottom = 381.0

[node name="Label" type="Label" parent="Panel/Control/PlayersJoined/HBoxContainer5"]
margin_right = 213.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "Player Id: "

[node name="Label2" type="Label" parent="Panel/Control/PlayersJoined/HBoxContainer5"]
margin_left = 217.0
margin_right = 553.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "saranuid (Host)"

[node name="HBoxContainer6" type="HBoxContainer" parent="Panel/Control/PlayersJoined"]
margin_top = 385.0
margin_right = 553.0
margin_bottom = 458.0

[node name="Label" type="Label" parent="Panel/Control/PlayersJoined/HBoxContainer6"]
margin_right = 213.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "Player Id: "

[node name="Label2" type="Label" parent="Panel/Control/PlayersJoined/HBoxContainer6"]
margin_left = 217.0
margin_right = 553.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "saranuid (Host)"

[node name="StartGame" type="Button" parent="Panel"]
margin_left = 917.0
margin_top = 502.0
margin_right = 1235.0
margin_bottom = 629.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/StartGame" to="." method="_on_StartGame_pressed"]
